Adds support for the AudioInjector.net Octo sound card.
Contains the sound/soc/bcm ALSA machine driver and necessary alterations
to the Kconfig and Makefile. Adds the dts overlay and updates the Makefile
and README.
Updates the relevant defconfig files to enable building for the Raspberry Pi.

--- a/arch/arm/boot/dts/overlays/README
+++ b/arch/arm/boot/dts/overlays/README
@@ -273,6 +273,12 @@ Load:   dtoverlay=audioinjector-wm8731-audio
 Params: <None>
 
 
+Name:   audioinjector-addons
+Info:   Configures the audioinjector.net audio add on soundcards
+Load:   dtoverlay=audioinjector-addons
+Params: <None>
+
+
 Name:   audremap
 Info:   Switches PWM sound output to pins 12 (Right) & 13 (Left)
 Load:   dtoverlay=audremap,<param>=<val>
