--- a/README
+++ b/README
@@ -1,18 +1,18 @@
 Linux kernel
 ============
 
-There are several guides for kernel developers and users. These guides can
-be rendered in a number of formats, like HTML and PDF. Please read
+There are several guides made for kernel developers and users. These guides can
+be rendered in a number of formats, like HTML or PDF. Please read
 Documentation/admin-guide/README.rst first.
 
-In order to build the documentation, use ``make htmldocs`` or
+In order to build documentation, use ``make htmldocs`` or
 ``make pdfdocs``.  The formatted documentation can also be read online at:
 
     https://www.kernel.org/doc/html/latest/
 
-There are various text files in the Documentation/ subdirectory,
-several of them using the Restructured Text markup notation.
+There are various text files in Documentation/ subdirectory,
+several of them are using the Restructured Text markup notation.
 
 Please read the Documentation/process/changes.rst file, as it contains the
-requirements for building and running the kernel, and information about
-the problems which may result by upgrading your kernel.
+requirements for building and running the kernel, and information reguarding
+the problems which may occour while upgrading your kernel.
